Main.1 rc 2 (#9)
Feature/payment payu (#6)
Feature/pagination (#7)

code refactor and code improvement